# panzi-json-logic

./: .gitignore  LICENSE  README.md  benchmark.py  setup.cfg  tests.py
json_logic/: __init__.py  __main__.py  apply.py  builtins.py  extras.py  types.py
json_logic/cert_logic/: __init__.py  __main__.py  apply.py  builtins.py  extras.py
testdata/: invalid.json  rule.json  update.sh  valid.json
