[metadata]
name = panzi-json-logic
version = 1.0.0
author = Mathias Panzenböck
description = Pure Python 3 JsonLogic and CertLogic implementation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/panzi/panzi-json-logic
project_urls = 
    Bug Tarcker = https://github.com/panzi/panzi-json-logic/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = .
packages = json_logic, json_logic.cert_logic
python_requires = >=3.6
